--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,8 +9,7 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
           <h1>Admin</h1>
-          <span class="subheading">Manage over post. </span>
-          
+          <span class="subheading">Manage posts.</span>
         </div>
       </div>
     </div>
@@ -20,64 +19,80 @@
 <div class="container">
   <div class="row">
     <div class="col text-center">
-      <h1 class="container">Dashboard</h1>
-      <p>Welcome you are logged in</p>
-      
+      <h1>Dashboard</h1>
+      <p>Welcome, you are logged in.</p>
     </div>
   </div>
-  </div>
 
-
-  <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="post-preview">
-
-                        <h1>Basic Action</h1>
-                        <hr>
-                        <a href="/edit/0"><button class="btn btn-primary ">Add a new post</button></a>
-                        <a href="/logout"><button class="btn btn-primary float-right">Logout</button></a>
-                        <hr>
-                        <h1>Upload a  file</h1>
-                        <form action="/uploader" method="post" enctype="multipart/form-data">
-                            <input type="file" name="file" id="file">
-                            <button type="submit"   class="btn btn-primary">submit</button>
-                        </form>
-                        <hr>
-                        <h1>Edit Panel</h1>
-                <table class="table ">
-                <thead>
-                    <!-- make a loop and fetch over content -->
-                   
-                  <tr>
-                    <th scope="col">sno</th>
-                    <th scope="col">Title</th>            
-                    <th scope="col">Date</th>
-                    <th scope="col">Edit</th>
-                    <th scope="col">Delete</th>
-                  </tr>
-                </thead>
-                <tbody>
-                    {% for posts in post %}
-                  <tr>
-                    <td>{{posts.sno}}</td>
-                    <td>{{posts.title[0:50]}}</td>          
-                    <td>{{posts.date[0:10  ]}}</td>
-                    <td><a href="/edit/{{posts.sno}}"><button class="btn btn-primary ">Edit</button></a></td>
-                    <td><a href="/delete/{{posts.sno}}"><button class="btn btn-primary ">Delete</button></a></td>
-                    
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-              </div>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="post-preview">
+        <h2>Basic Actions</h2>
+        <hr />
+        <div class="row">
+          <div class="col-md-6">
+            <a href="/edit/0"
+              ><button class="btn btn-primary btn-block">
+                Add a new post
+              </button></a
+            >
+          </div>
+          <div class="col-md-6">
+            <a href="/logout"
+              ><button class="btn btn-primary btn-block">Logout</button></a
+            >
+          </div>
+        </div>
+        <hr />
+        <h2>Upload a File</h2>
+        <form action="/uploader" method="post" enctype="multipart/form-data">
+          <div class="row">
+            <div class="col-md-9">
+              <input type="file" name="file" id="file" class="form-control" />
+            </div>
+            <div class="col-md-3">
+              <button type="submit" class="btn btn-primary btn-block">
+                Submit
+              </button>
+            </div>
+          </div>
+        </form>
+        <hr />
+        <h2>Edit Panel</h2>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Sno</th>
+                <th scope="col">Title</th>
+                <th scope="col">Date</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for post in post %}
+              <tr>
+                <td>{{ post.sno }}</td>
+                <td>{{ post.title[:50] }}</td>
+                <td>{{ post.date[:10] }}</td>
+                <td>
+                  <a href="/edit/{{ post.sno }}"
+                    ><button class="btn btn-primary">Edit</button></a
+                  >
+                </td>
+                <td>
+                  <a href="/delete/{{ post.sno }}"
+                    ><button class="btn btn-primary">Delete</button></a
+                  >
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
-
-
-
-
- 
+  </div>
 </div>
 {% endblock %}
